Platform 1.22

* Library Upgrades

  - Joda-time to 2.8

Platform 1.21

* DHE disabled

  We disabled all default-enabled DHE ciphers in both HttpServer and
  JettyHttpClient.

* Future Utilities

  We've added MoreFutures class which contains utility methods for Future and
  the new Java8 CompletableFuture.  For basic future, there are methods for
  fetching the future value with minimal exception handling.  For
  CompletableFuture, there are methods for easily creating futures.  Finally,
  we have added methods for converting to and from Guava ListenableFuture to
  ease the transition to CompletableFuture.

* HttpServer

  We changed the default value of the "http-server.accept-queue-size"
  configuration option to 8000.

* Library Upgrades

  - Jetty to 9.2.11

Platform 1.20

* TestingHttpClient

  We have deprecated the TestingHttpClient constructors that take a
  Function<Request, Response> in order to remove ambiguity when using
  a lambda. Use the Processor variants instead.

  We have added a TestingHttpClient.setProcessor() method.

* HttpClient

  We renamed the "http-client.read-timeout" configuration option to
  "http-client.idle-timeout".

  We added the "http-client.request-timeout" configuration option.

  We deprecated the unused "http-client.keep-alive-interval" configuration
  option.

* HttpServer

  We added the "http-server.accept-queue-size" configuration option.

* Threads

  Thread factories provided by the Threads utility class now add threads to a
  ThreadGroup.  Some tools organize threads by ThreadGroup which makes it
  easier to work with servers with lots of threads.  The ThreadGroup is named
  using:

    String.format(nameFormat, "group")

  This means the nameFormat must expect a String argument instead of an int.
  To ease migration, the code adapts formats with a single %d, but this may
  be removed in a future release.

* Discovery

  We have added an /admin/stop-announcing resource to the admin port.