@@ -32,7 +32,7 @@ import java.util.concurrent.atomic.AtomicBoolean;
 final class RetryingResponseHandler<T, E extends Exception>
         implements ResponseHandler<T, RetryException>
 {
-    private static final Set<Integer> RETRYABLE_STATUS_CODES = ImmutableSet.of(408, 500, 502, 503, 504);
+    private static final Set<Integer> RETRYABLE_STATUS_CODES = ImmutableSet.of(408, 499, 500, 502, 503, 504, 598, 599);
     private static final Logger log = Logger.get(RetryingResponseHandler.class);
     private final Request originalRequest;
     private final ResponseHandler<T, E> innerHandler;
